ozone: drm: Re-set cursor when GPU process connects

When the GPU process restarts we need to re-send the cursor bitmap since
all GPU process display state is lost.

It looks like it may have been broken all the way back to 82455da550b7 [formerly d818104f773a]
("[Ozone-Drm] Notify cursor of channel established last"), which fixed a
different issue but also caused the message that was intended to restore
the cursor (in CommitBoundsChange) to not get delivered.

Bug: 908682
Test: kill $(pgrep -f type=gpu-process), cursor restored

Change-Id: Ibacab25807995d9402c46f88a7d51b68fe8dfbfc
Reviewed-on: https://chromium-review.googlesource.com/c/1351903
Reviewed-by: Daniel Nicoara <dnicoara@chromium.org>
Commit-Queue: Daniel Nicoara <dnicoara@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611166}
Former-commit-id: 843847fcb01b920fa5c5693623ebc243151254c8